the bug database on sourceforge. 


Version 0.79
------------

This build features a new rasterizer for triangles. Most notably, the new rasterizer fully
implements the plane equation approach with pixel and texel correct stepping of all
parameters.

This version addresses the following issues:

961343 - Use DDA for triangle edges
970915 - Matrix Stack test failed


Version 0.78
------------

This build addresses all known failures of the conformance test that are not related to
texture sampling. Notably, it passes the lightning, fog and blending tests.

This version addresses the following issues:

970897 - Vertex Order test (Test number #5) failed.
970910 - Triangle Tile test failed
970911 - Spotlight tests failed
970912 - Blend test failed.
970913 - Fog Linear test failed.
970916 - Transformation Normal test failed.
970918 - Fog Exponential test failed.
970919 - Rescale Normal test failed.


Version 0.77
------------

This version addresses the following issues:

970914 - Read Format test failed.
970901 - Color Ramp test failed
970907 - LogicOp Function test failed.
970902 - Stencil Plane Clear test failed.
970903 - Stencil Plane Corners test failed.
970905 - Stencil Plane Operation test failed.
970908 - Point Rasterization test failed.
970909 - Horizontal and Vertical Line test failed.
970906 - Depth Buffer Clear test failed.
970900 - Clip test failed.
970899 - Transform Homogenous Coordinates test failed.
968663 - Divide By Zero Test Hangs
863637 - GL_OES_compressed_paletted_tex extension missing
958796 - eglQueryString not implemented
863638 - rescale normal vs. normalize
864273 - PixelStorei is not implemented


Version 0.76
------------

Key changes in this version of the library are tracked under the following tracker numbers:

958793 - Create math library for non-XScale processors
937679 - Employ plane equations for rasterization

In addition, this version addresses the following issues:

960542 - fragment processing for clearing missing/incorrect